finally fixed the overlapping issue of icon drop menu in mobile phones.

--- a/src/navItems/animatedNav/AnimatedNav.scss
+++ b/src/navItems/animatedNav/AnimatedNav.scss
@@ -77,16 +77,19 @@ $background-color_1: var(--nav-overlay-color);
 .hamBox {
 	position: relative;
 	z-index: 99999999;
-	width: 2.75rem;
-	height: 3.75rem;
 	cursor: pointer;
-	transition: 0.3s ease;
-
+	transition: all 0.7s cubic-bezier(0.16, 1, 0.3, 1);
+	height: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+	top: -1rem;
 }
 
+
 .lineTop {
-	margin: 0 auto;
-	position: absolute;
+
+
 	display: block;
 	width: 1.5rem;
 	height: 0.125rem;
@@ -100,8 +103,6 @@ $background-color_1: var(--nav-overlay-color);
 }
 
 .lineBottom {
-	margin: 0 auto;
-	position: absolute;
 	display: block;
 	width: 1.5rem;
 	height: 0.125rem;
@@ -113,6 +114,7 @@ $background-color_1: var(--nav-overlay-color);
 	transition: all 0.7s cubic-bezier(0.16, 1, 0.3, 1);
 	color: $color_3;
 	top: -0.5em;
+
 }
 .lineTopAr {
 	background: var(--title-color);
@@ -146,13 +148,15 @@ $background-color_1: var(--nav-overlay-color);
 	top: 0.35em;
 }
 .lineTop.spin {
-	top: -0.85em;
+	position: relative;
+	top: 0.1em;
 	transform: rotate(135deg);
 	background: var(--container-color);
 }
 
 .lineBottom.spin {
-	top: -0.85em;
+	position: relative;
+	top: -0.45em;
 	transform: rotate(225deg);
 	background: var(--container-color);
 }
@@ -183,81 +187,6 @@ $background-color_1: var(--nav-overlay-color);
 	.nav {
 		width: 70vw;
 	}
-
-	.navbar {
-
-		padding-top: 0rem;
-		justify-content: space-between;
-		align-content: center;
-		text-align: center;
-		line-height: 0.1rem;
-		gap: 0em;
-		height: 10rem;
-		display: flex;
-	}
-
-
-	.side__navbar {
-		display: flex;
-		justify-content: space-between;
-		align-content: center;
-		width: 100%;
-		gap: 0rem;
-		z-index: 999;
-		position: relative;
-	}
-
-	.navbar__container_mobile {
-
-		display: flex;
-		justify-content: space-between;
-		padding: 0rem;
-		width: 100%;
-		margin-top: 0rem;
-		padding-bottom: 2rem;
-	}
-
-	.logo {
-		font-size: 0.8rem;
-	}
-
-	.dropdown__icon {
-		font-size: 0.8rem;
-		position: absolute;
-		top: 0rem;
-		font-size: 0.8rem;
-		position: absolute;
-		top: -0.2rem;
-		left: 6.5rem;
-	}
-
-	.hamBox_mobile {
-		width: 2.375rem;
-		height: 2.5rem;
-		position: absolute;
-		top: 0rem;
-		right: -8.5rem;
-		z-index: 999999999;
-		transition: all 0.7s cubic-bezier(0.16, 1, 0.3, 1);
-
-	}
-
-	.hamBoxOpen {
-		width: 1.375rem;
-		height: 1.5rem;
-		position: relative;
-		top: 0.3rem;
-		right: -6.7rem;
-		z-index: 99999999;
-		transition: all 0.7s cubic-bezier(0.16, 1, 0.3, 1);
-
-	}
-
-	.lineTop_mobile {
-		color: $color_3;
-		top: 0.75em;
-	}
-
 	.dropdown__icon.spin {
 		display: none;
 	}
@@ -267,25 +196,6 @@ $background-color_1: var(--nav-overlay-color);
 		width: 100vw;
 		z-index: -2;
 	}
-
-	.lineTop_mobile.spin {
-		top: 0.35em;
-		transform: rotate(135deg);
-		background: var(--container-color);
-	}
-
-	.lineBottom_mobile.spin {
-		top: 0.40em;
-		transform: rotate(225deg);
-		background: var(--container-color);
-	}
-
-	.logo_mobile.spin {
-		letter-spacing: 0.4rem;
-		font-size: 0.9rem;
-		padding-top: 0rem;
-	}
-
 	.nav__footer {
 		display: block;
 	}
