--- a/src/navItems/animatedNav/dropDownMenu/dropResponsive/mobileDrop/MobileDrop.css
+++ b/src/navItems/animatedNav/dropDownMenu/dropResponsive/mobileDrop/MobileDrop.css
@@ -2,13 +2,9 @@
 .dropdown__icon_mobile span {
     position: relative;
     align-items: center;
-    z-index: 999999
+    z-index: 999999;
 }
 
-.dropdown-menu_mobile {
-    z-index: 999999999;
-    display: block
-}
 
 .dropdown__icon_mobile {
     display: flex;
@@ -16,14 +12,10 @@
     cursor: pointer;
     transition: .8s cubic-bezier(.19, 1, .22, 1);
     color: var(--text-color);
-    top: 0rem;
-    right: -4.5rem;
+    top: 3rem;
+    right: -18.5rem;
 }
 
-.dropdown__icon_mobile.spin,
-.language__dropdown_mobile {
-    transition: 1s cubic-bezier(.16, 1, .3, 1)
-}
 
 .dropdown__icon:hover {
     cursor: pointer
